@@ -1,4 +1,5 @@
 ndim-utils 0.6.x
+  * one: prevent filesystem deduplication from working
 
 ndim-utils 0.6
   * Migrate to newer build-helpers/
